--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul>
                 <li>当サイトはオンライン議論プラットフォームです</li>
                 <li>実験にご参加いただき、誠にありがとうございます</li>
-                <li>「初めにこちらをご覧ください」タイルをクリックしていただきください</li>
+                <li>「初めにこちらをご覧ください」タイルをクリックしてください</li>
                 <li>手順が確認できましたら、手順に沿って実験を行ってください</li>
             </ul>
         </section>
@@ -51,7 +51,7 @@
         <section id = "contents" class="wrapper">
             <h2 class = "sec-title">Contents</h2>
             <ul>
-                    <li><a href="./img/second.png" target="_blank"><img src="./img/first.png" width="300" alt="" ></a></li>
+                    <li><a href="./img/second.png" target="_blank"><img src="./img/First.png" width="300" alt="" ></a></li>
                     <li><a href="./img/questionnaire.png" target="_blank"><img src="./img/questionnaire.png" width="300" alt="" ></a></li>
                     <li><a href="./works/videochat/indexaaaa.html" target="_blank"><img src="./img/videochat.png" width="300" alt="" ></a></li>
                     <li><a href="./works/imageselect/buttonimage.html" target="_blank"><img src="./img/Front.png" width="300" alt="" ></a></li>
